Fix: Parameterize CORS and API URL for production deployment